--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "windows-imagemagick-resizer",
   "version": "1.0.3",
-  "description": "A package to resize and rename an array (or a single image string) to a specified size and new name using image magick on the windows platform",
+  "description": "A package to resize and rename an array of images to a specified size and new name using image magick on the windows platform",
   "main": "index.js",
   "repository": "https://github.com/BrianARuff/windows-imageMagick-resizer",
   "scripts": {
